<resources>
    <string name="app_name">Smart canteen</string>
    <string name="title_menu">Menu</string>
    <string name="title_order">Order</string>
    <string name="title_invent">Inventory</string>
    <string name="title_report">Report</string>
    <string name="title_customer">Customer</string>
    <string name="Menu">Menu</string>
    <string name="Order">Order</string>
    <string name="Payment">Payment</string>
    <string name="navigation_Report" />
    <string name="Inventory">Inventory</string>
    <string name="Report">Report</string>
    <string name="Customer">Customer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_order">ActivityOrder</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_order_fragment">OrderFragment</string>
    <string name="Name">Name</string>
    <string name="Category">Category</string>
    <string name="Description">Description</string>
    <string name="Price">Price</string>
    <string name="Image">Image</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <string name="Product">Product</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Upload">Upload</string>
    <string name="Add_product">Please enter new product detail</string>
    <string name="quantity">Quantity</string>
    <string name="title_activity_register">Register</string>
    <string name="Register">Register</string>
    <string name="Registration">Registration</string>
    <string name="Wallet_ID">Wallet ID</string>
    <string name="password">Password</string>
    <string name="Contact">Contact</string>
    <string name="Address">Address</string>
    <string name="SSM">SSM</string>
    <string name="Login">Login</string>
    <string name="greeting">Welcome to Smart Canteen POS system</string>
    <string name="Edit">Edit</string>
    <string name="Product_name">Product Name</string>
    <string name="Accept">Accept</string>
    <string name="Decline">Decline</string>
    <string name="OrderID">"Order ID "</string>
    <string name="msg">Product in low stock  :</string>
    <string name="AddInventory">Add Inventory</string>
    <string name="supplier">Supplier</string>
    <string name="purchase">Make purchase order</string>
    <string name="ViewPurchase">View purchase order</string>
    <string name="Inventory_detail">Fill in inventory detail</string>
    <string name="Stock">In Stock</string>
    <string name="add_stock">Add  stock quantity</string>
    <string name="POID">Purchase order id</string>
    <string name="Purchase_Detail">Fill in purchase order details</string>
    <string name="Purchase_Quantity">Purchase Quantity</string>
    <string name="Purchase_detail">Purchase order</string>
    <string name="Fee">Fee</string>
    <string name="Purchase_date">Purchase Date</string>
    <string name="order_product">Order Product</string>
    <string name="order_quantity">Order Quantity</string>
    <string name="order_time">Order Time</string>
    <string name="order_status">Order Status</string>

    <!-- String from Gab part-->
    <string name="btm_wallet">Wallet Balance</string>
    <string name="btm_fund">Add Fund</string>
    <string name="btn_showQR">Show QR Code</string>
    <string name="btn_scanQR">Scan QR Code</string>
    <string name="btnTopUp">Add Fund</string>
    <string name="btnChangeCard">Change Card</string>
    <string name="btnConfirm">Confirm</string>
    <string name="btnCancel">Cancel</string>
    <string name="LoginWalletID">WalletID</string>
    <string name="LoginPassword">Password</string>
    <string name="chooseReport">Please choose report type</string>
    <string name="TransactionReport">Transaction Report</string>
    <string name="OnlineOrder">Online order report</string>
    <string name="Monthly_Report">Monthly_Report</string>
    <string name="Yearly_Report">Yearly_Report</string>
    <string name="Daily_report">Daily_report</string>
    <string name="Total">Total  :</string>
    <string name="Time">Day/Month/Year :</string>
    <string name="Transfer">Transfer ID</string>
    <string name="Giver">Giver ID</string>
    <string name="Receiver">Receiver ID</string>
    <string name="Amount">Amount</string>

    <string-array name="foodCategory">
        <item>Food</item>
        <item>Baverage</item>
        <item>Snack</item>
        <item>Books/Newspaper</item>
        <item>Medicine</item>
        <item>Others</item>
    </string-array>

    <!-- String from Boon part-->
    <string name="apps_name">Redemption</string>
    <string name="walletid">WalletID</string>
    <string name="login">Login</string>
    <string name="pass">Password</string>
    <string name="Home">Home</string>
    <string name="Coupon">Coupon</string>
    <string name="giftCard">Gift Card</string>
    <string name="history">History</string>
    <string name="mainTitle">Loyalty Points</string>
    <string name="pointsTitle">Total Points Collected:</string>
    <string name="totalPoints">0000</string>
    <string name="pointsLabel">points</string>
    <string name="Redeem">Redeem</string>
    <string name="discountTitle">Discount Coupons</string>v
    <string name="itemTitle">Items</string>
    <string name="historyTitle">History (*To copy a code, please tap on the selected row!)</string>
    <string name="historyTitle_Disc">Discount Code History </string>
    <string name="historyTitle_Item">Item History </string>
    <string name="redeemName">Title</string>
    <string name="redeemPointRequire">Point Required</string>
    <string name="redeemAvailability">Availability</string>
    <string name="home_inst_title">Instructions:</string>
    <string name="home_instructions">Please read the following before Redeeming: \n
                                    1. Tap $ icon below for discount codes. \n
                                    2. Tap Gift icon below for gift card. \n
                                    3. Tap Redeem button to redeem an item. \n
                                    4. Tap OK for confirmation message. \n
                                    5. Wait for successful redemption message. \n
                                    6. Check history to view list of redemption. \n
                                    7. To copy a code, tap at a desired column.
    </string>

    <string name="his_redeemID">RedeemCodeID</string>
    <string name="his_redeemItemID">RedeemItemID</string>
    <string name="his_Desc">Description</string>
    <string name="his_CouponCode">Discount Code</string>
    <string name="his_ItemCode">Item Code</string>
    <string name="his_CreateAt">Create Date </string>
    <string name="his_WalletID">WalletID</string>
    <string name="his_RedeemDate">Redeem Date</string>
    <string name="selectLabel">Selection: </string>
    <string name="etTitle">Input Here!</string>
    <string name="btnR">Redeem</string>
    <string name="item1">Item Name: Reload Card RM10 </string>
    <string name="item1.1">Point Used: 1500pts</string>
    <string name="item2">Item Name: Gift Card RM10 </string>
    <string name="item2.1">Point Used: 2000pts</string>
    <string name="coupon1">Coupon Name: RM5 discount </string>
    <string name="coupon1.1">Point Used: 500pts</string>
    <string name="coupon2">Coupon Name: RM10 discount </string>
    <string name="coupon2.1">Point Used: 1000pts</string>

    <!--String for WJ-->
    <string name="register">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="order">Order</string>
    <string name="orderHistory">Order History</string>
    <string name="canteen1">Red Bricks Cafeteria</string>
    <string name="canteen2">Yum Yum Cafeteria</string>
    <string name="canteen3">Nyonya Cafeteria</string>
    <string name="canteen4">Casuarina Cafeteria</string>
    <string name="convenienceStore">Convenience Store</string>
    <string name="mixedRice">Mixed Rice</string>
    <string name="noodles">Noodles</string>
    <string name="masakanMalaysia">Masakan Malaysia</string>
    <string name="fresh">Fresh</string>
    <string name="indoDeli">Indo Deli</string>
    <string name="vegetarianFood">Vegetarian Food</string>
    <string name="monsterCafe">Monster Cafe</string>
    <string name="productImage">Product Image</string>
    <string name="amount">Amount: </string>
    <string name="cancelOrder">Cancel Order</string>
    <string name="pay">Pay</string>
    <string name="applyCode">Apply Code</string>
    <string name="discountCode">Discount Code</string>
    <string name="productName">Product Name:</string>
    <string name="price">Price (RM):</string>
    <string name="orderDateTime">Order Date Time:</string>
    <string name="total">Total (RM):</string>
    <string name="status">Status: </string>
    <string name="productDescription">Product Description:</string>
    <string name="orderID">Order ID</string>
    <string name="redeemOrder">Redeem My Order</string>
    <string name="stall1">Stall 1</string>
    <string name="stall2">Stall 2</string>
    <string name="stall3">Stall 3</string>
    <string name="stall4">Stall 4</string>
    <string name="stall5">Stall 5</string>
    <string name="stall6">Stall 6</string>
    <string name="stall7">Stall 7</string>
    <string name="stall8">Stall 8</string>
    <string name="stall9">Stall 9</string>
    <string name="mercTest">lai</string>
    <string name="btm_wallet_history">Wallet History</string>
    <string name="walletTransferHistoryNavi">Transfer</string>
    <string name="walletTransactionHistoryNavi">Online Transaction</string>
    <string name="walletTopupHistoryNavi">Top Up</string>
    <string name="chkValid">Check Validity</string>
    <string name="ordQty">Order Quantity:</string>
    <string name="removeCode">Remove Code</string>
    <string-array name="qtyOfOrder">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="topup">Top Up Wallet</string>

</resources>
