<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/orderHistory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orderID"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/textViewProdName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/productName"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/textViewOrderDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orderDateTime"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textAppearance="@style/TextAppearance.AppCompat" />

</LinearLayout>