<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/PID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ID" />

        <TextView
            android:id="@+id/PName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/PCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Category"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/PDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Description" />

        <TextView
            android:id="@+id/PPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Price" />

        <TextView
            android:id="@+id/PSupplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/supplier" />

    </LinearLayout>

</LinearLayout>