<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent" android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainTitle"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pointsTitle"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:textAlignment="center"
            tools:textColor="@android:color/black"
            tools:textStyle="bold" />

        <TextView
            android:id="@+id/tvBalance1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/totalPoints"
            android:textAlignment="center"
            android:textSize="50sp"
            tools:textAlignment="center" />

        <TextView
            android:id="@+id/tvpointsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pointsLabel"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvEmpty2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvInstruct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_inst_title"
            android:textSize="28sp"
            tools:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvInstructions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="8"
            android:text="@string/home_instructions"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>
</FrameLayout>