<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">


    <TextView
        android:id="@+id/ReportIName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/OrderID" />

    <TextView
        android:id="@+id/ReportIPN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Product" />

    <TextView
        android:id="@+id/ReportIOQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_quantity" />

    <TextView
        android:id="@+id/ReportIPA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Amount" />

</LinearLayout>