<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtTransferID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Transfer"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtTransferGiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Giver"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtTransferAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Amount"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>